# application-form

./: README.md
backend/: .gitignore  README.md  config.example.toml  pyproject.toml
backend/db/migrations/: env.py  script.py.mako
backend/db/migrations/versions/: 2026-03-20__b0b4722348de.py  2026-03-20__f1f018ebf681.py
backend/src/app/: exceptions.py  settings.py
backend/src/app/client/: __init__.py  collection.py  entity.py  primitives.py
backend/src/app/contrib/litestar/: __init__.py  dependencies.py  exception_handler.py  factory.py  openapi.py  plugins.py  settings.py
backend/src/app/contrib/litestar/domain/: system.py
backend/src/app/contrib/msgspec/: __init__.py
backend/src/app/contrib/sqlalchemy/: __init__.py  engine.py  settings.py
backend/src/app/domain/applicants/: dependencies.py  emails.py  enums.py  repositories.py  routes.py  schema.py  services.py
backend/src/app/domain/applicants/controllers/: __init__.py  applicant.py
backend/src/app/domain/volunteers/: auth.py  dependencies.py  enums.py  exceptions.py  repositories.py  routes.py  schema.py  services.py
backend/src/app/domain/volunteers/controllers/: __init__.py  account.py  auth.py
backend/src/app/models/: __init__.py  account.py  applicant.py  oauth2_credentials.py
backend/src/app/server/: __init__.py  __main__.py  asgi.py  dependencies.py  routes.py  settings.py
backend/tests/: conftest.py  test_app.py  test_applicants.py
frontend/: .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.d.ts
(+60 files in other folders)
