[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "litestar[brotli,jwt,redis,sqlalchemy] (>=2.17.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "litestar-saq (>=0.5.3,<0.6.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "authlib (>=1.6.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "geoalchemy2 (>=0.18.1,<0.19.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "app", from = "src" }]

[tool.poetry.scripts]
app = "app.server.__main__:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
